# swipe-backend

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  config.py  docker-compose-do.yml  docker-compose-le.yml  docker-compose-prod.yml  docker-compose.yml  event_consumer.py  event_printer.py  heroku_release.py  main.py  message_consumer.py  pyproject.toml  settings.py  start.sh
.github/workflow/: digitalocean-push.yml
.github/workflows/: deploy-digitalocean.yml  deploy-prod-new-acks.yml  deploy-prod.yml
_janus/: janus.eventhandler.sampleevh.jcfg  janus.jcfg  janus.plugin.audiobridge.jcfg  janus.plugin.textroom.jcfg  janus.plugin.videoroom.jcfg  janus.transport.http.jcfg
_janus_demo/: textroomtest.js
_janus_plugins/: libjanus_textroom.la  libjanus_textroom.so.0  libjanus_textroom.so.0.0.0
config-nginx/: nginx.conf
config-nginx/conf.d/: nginx-chat.conf  nginx-landing.conf  nginx-le.conf  nginx-matchmaking.conf  nginx-mm-chat.conf  nginx-swipe.conf
janus/: event_consumer.py  message_consumer.py  schemas.py
migrations/: README  env.py
migrations/versions/: 1289e52e1d8d_add_date_and_comment_to_blacklist_table_.py  12a33c84108f_add_global_chat_message_model.py  175f726c41d7_add_cascades_to_blacklist_table.py  1bc8c29f42be_add_chat_and_chat_messages.py  2f8bd089e155_add_avatar_field_to_user.py  314cd30f85c8_add_notification_types_field.py  37a57e965662_add_last_online_field.py  3d9a63ece08e_add_chat_source_field_to_chat.py  467f3f54050b_add_auth_info.py  4c50461fa935_add_smoking_and_drinking_fields.py  535fab273fdd_add_birth_date_field.py  60f6a7d20ff1_update_default_values_for_bio.py  6974c151deef_remove_provider_user_id_column_from_.py  6b10ba92d46e_make_last_online_field_nullable.py  6edd9b969fe3_add_cascade_deletes_on_chat_chatmessage_.py  8112872402ab_add_is_liked_field_to_chat_message.py  8384bea8614b_update_auth_info.py  87fea1a11a7f_add_zodiac_sign_field.py  (+26 more)
swipe/: config.py  database.py  dependencies.py  endpoints.py  error_handlers.py  errors.py  images.py  janus_client.py  middlewares.py  models.py  randomizer.py  routes.py  security.py  settings.py  storage.py  utils.py  ws_connection.py
tests/: conftest.py  test_auth.py  test_background_tasks.py  test_chats.py  test_first_step.py  test_matchmaker.py  test_message_consumer_global.py  test_swipes.py  test_user_fetch.py  test_user_update.py  test_ws_chat.py
ws_servers/: chat_server.py  matchmaker.py  matchmaking_server.py  schemas.py  services.py
(+75 files in other folders)
