[tool.poetry]
name = "swipe-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
SQLAlchemy = "^1.4.25"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.4"
pydantic = "^1.8.2"
python-dotenv = "^0.19.1"
boto3 = "^1.18.61"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
docker = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
