[tool.poetry]
name = "swipe-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
SQLAlchemy = "^1.4.25"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.4"
pydantic = "^1.8.2"
python-dotenv = "^0.19.1"
boto3 = "^1.18.61"
requests = "^2.26.0"
aioredis = "^2.0.0"
names = "^0.3.0"
lorem = "^0.1.1"
Pillow = "^8.4.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
websockets = "^10.0"
firebase-admin = "^5.1.0"
sentry-sdk = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
docker = "^5.0.3"
fakeredis = "^1.6.1"
httpx = "^0.21.1"
trio = "^0.19.0"
pytest-timeout = "^2.0.1"

[tool.pytest.ini_options]
timeout = 3000

[tool.coverage.run]
source = [
    'swipe', 'janus'
]
branch = true
omit = [
    '*/models.py',
    '*/enums.py',
    'swipe/dependencies.py',
    'swipe/storage.py'
]

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
sort = 'cover'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
